--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
+/[Mm]ain_Data/
 /Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
@@ -32,3 +33,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.exe
